public interface Prototype {
    Documento clone();
}